--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^9.1.0",
+    "firebase": "^11.0.1",
     "next": "14.2.15",
     "prettier": "^3.3.3",
     "react": "^18",
