--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
