--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^9.1.0",
     "firebase": "^11.0.1",
+    "formik": "^2.4.6",
     "next": "14.2.15",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
     "react-loader-spinner": "^6.1.6",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
