--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.6",
+    "@mui/x-date-pickers": "^7.22.2",
     "@reduxjs/toolkit": "^2.3.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "eslint-config-prettier": "^9.1.0",
     "firebase": "^11.0.1",
     "formik": "^2.4.6",
