--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "yup": "^1.4.0"
