--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
