--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
+    "uid": "^2.0.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
